# Cerberus

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
config/: .env.dev  Load-DevEnv.ps1  fortify.toml  haproxy-dev.cfg  haproxy.cfg  nginx-site.conf  nginx.conf
crates/cerberus-common/: Cargo.toml
crates/cerberus-common/src/: constants.rs  error.rs  lib.rs  types.rs
crates/fortify/: Cargo.toml
crates/fortify/src/: config.rs  haproxy.rs  main.rs  state.rs
crates/fortify/src/captcha/: ammo_box.rs  generator.rs  mod.rs  verifier.rs
crates/fortify/src/circuits/: mod.rs  tracker.rs
crates/fortify/src/cluster/: gossip.rs  mod.rs  passport.rs
crates/fortify/src/routes/: captcha.rs  health.rs  mod.rs  passport.rs
crates/vanity-onion/: Cargo.toml
crates/vanity-onion/src/: main.rs
deploy/: cerberus-deploy.sh  cerberus-one-click.sh  dashboard_server.py  haproxy_cerberus.cfg  nginx_cerberus.conf
deploy/dashboard/: index.html
docs/: 0000-master-architecture.md  0001-project-scaffold.md  0002-instructions.md  0100-layer1-haproxy.md  0101-layer2-nginx.md  0103-layer0-xdp.md  0200-feature-virtual-queue.md  0201-feature-threat-dial.md  0203-feature-advanced-captcha.md  0204-threat-model.md  0205-attack-kill-table.md  0300-operations-monitoring-ui.md  0301-operations-vanity-onion.md  0400-infra-dependencies.md  0401-infra-ci-cd.md  0402-infra-dev-environment.md  0500-operations-cluster-system.md  AI_INSTRUCTIONS.md  Final_Proposal.md  Project_Outline_R0.md  design-rustbalance-chimera.md  fortify.md  instructions.md  monster.md  nginx.md  performance-expectations.md  research-xdp-vps-challenges.md  virtual-queue-system.md  xmr-priority-system.md
docs/archive/: 0100-layer1-haproxy.md  0102-layer3-fortify.md  0104-tc-ebpf-flow-shaping.md  0105-kernel-tcp-tuning.md  0106-haproxy-http-gate.md  0107-protocol-normalization.md  0108-nginx-fortify-isolation.md  0202-feature-xmr-priority.md  0203-feature-advanced-captcha.md  0301-operations-vanity-onion.md  0402-infra-dev-environment.md  audit-cerberus-projected.md  audit-endgame-v3.md
docs/later-phases/: feature-turbo-mode.md
scripts/: Check-Code.ps1  cerberus-init.sh  cerberus-killswitch.sh  cerberus-sysctl.sh  check.sh
static/: captcha.html
static/backend-mock/: index.html
xdp/: Makefile  cerberus_tc_kern.c  cerberus_xdp_kern.c
