[workspace]
resolver = "2"
members = [
    "crates/fortify",
    "crates/cerberus-common",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Cerberus Team"]
license = "MIT"
repository = "https://github.com/your-org/cerberus"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Web Framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Redis (1.x has breaking changes - using stable 0.27 for now)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Crypto
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"

# Image Generation (CAPTCHA)
image = "0.25"
imageproc = "0.26"
rusttype = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
