[package]
name = "cerberus-common"
description = "Shared types, traits, and utilities for Cerberus components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
