[package]
name = "vanity-onion"
description = "Cerberus Vanity Onion Address Generator - Generate branded .onion addresses"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vanity-onion"
path = "src/main.rs"

[dependencies]
# Crypto - use versions compatible with ed25519-dalek
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
base32 = "0.5"
rand = "0.8"  # ed25519-dalek 2.x uses rand 0.8
rand_core = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallel processing
rayon = "1.10"

# Progress
indicatif = { version = "0.17", features = ["rayon"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hex = "0.4"
